<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@drawable/bbr">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center">

        <EditText
            android:id="@+id/e_aadhar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableLeft="@drawable/ic_aadhar_black"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/aadhar_number"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/e_email"
            app:layout_constraintTop_toBottomOf="@+id/e_email"
            app:layout_constraintVertical_bias="0.042" />

        <EditText
            android:id="@+id/e_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/input_bg"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email_gmail_com"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.227" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/btn1_main"
            android:gravity="center"
            android:text="@string/get_otp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
            app:layout_constraintVertical_bias="0.059" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/btn1_main"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/e_pass"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/e_pass"
            app:layout_constraintTop_toBottomOf="@+id/e_pass"
            app:layout_constraintVertical_bias="0.124" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/enter_otp_here"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/e_aadhar"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/e_aadhar"
            app:layout_constraintTop_toBottomOf="@+id/e_aadhar"
            app:layout_constraintVertical_bias="0.069" />

        <EditText
            android:id="@+id/e_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:drawableLeft="@drawable/ic_security"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.065" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginLeft="34dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:height="20dp"
            android:clickable="true"
            android:gravity="center|right"
            android:onClick="gotologin"
            android:text="@string/already_have_account_sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/holo_orange_dark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.098" />

        <ProgressBar
            android:id="@+id/prgbar1"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.903" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Register"
            android:textColor="@color/purple_500"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>